inserir logotipo na navbar

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>PRINTRO</title>
+	<title>Printarget - soluções para t-shirts</title>
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 	<!-- Font Awesome CSS -->
@@ -60,7 +60,7 @@
 			<div class="table height-100p">
 				<div class="d-table-cell valign-middle text-left">
 					<a href="index.html" class="logo">
-						<img src="../assets/images/target_logo.png" alt="" class="img-responsive inline-block">
+						<img src="../assets/images/logo_targetprint.svg" alt="logotipo da empresa" class="" width="auto" height="95" >
 					</a>
 				</div>
 				<div class="d-table-cell valign-middle text-center sm-text-right">
@@ -438,7 +438,7 @@
 				</div>
 				<div class="col-xl-6 col-lg-6 col-md-12 wow fadeInRight animated">
 					<div class="about-image">
-						<img src="../assets/images/about-img-1.jpg" alt="" class="img-fluid">
+						<img src="../assets/images/target_logo.svg" alt="" class="img-fluid">
 					</div>
 				</div>
 			</div>
